--- a/login_course/backend/pyproject.toml
+++ b/login_course/backend/pyproject.toml
@@ -9,6 +9,10 @@ readme = "README.md"
 python = "^3.10"
 uvicorn = "^0.22.0"
 fastapi = "^0.95.2"
+sqlalchemy = "1.4.41"
+asyncpg = "^0.27.0"
+psycopg2 = "^2.9.6"
+sqlmodel = "^0.0.8"
 
 
 [build-system]
